some change in manifest

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Responsive navbar with animation, react-router-dom & react-icons"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Responsive Navbar </title>
 
   </head>
 
